mongodb/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongodb
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/part-of: mongodb
    app.kubernetes.io/component: database
    app.openshift.io/runtime: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 3
  serviceName: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      serviceAccountName: sa-mongodb
      securityContext:
        runAsUser: 999
        allowPrivilegeEscalation: false
        runAsNonRoot: true
      containers:
        - name: mongo
          image: mongodb
          imagePullPolicy: Always
          args:
            - --config
            - /etc/mongo/mongod.conf
          ports:
            - name: mongodb
              containerPort: 27017
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: config
              mountPath: /etc/mongo
            - name: keyfile-shared
              mountPath: /etc/mongokey
      volumes:
        - name: config
          configMap:
            name: mongod-config
        - name: keyfile
          secret:
            secretName: mongod-keyfile
        - name: keyfile-shared
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteMany
        storageClassName: nfs
        resources:
          requests:
            storage: 5Gi
